gcc/testsuite/gdc.test/fail_compilation/fail184.d
/*
TEST_OUTPUT:
---
fail_compilation/fail184.d(8): Error: redundant attribute `final`
---
*/

final final int x;
